<resources>
    <string name="app_name">Homework8</string>
    <string name="hear_me_text">Listen to the best music every day with <font color="#00FF00">Hearme</font> now!</string>
    <string name="get_started">Get Started</string>
    <string name="let_s_you_in">Let\'s you in</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="sign_in_with_password">Sign in with password</string>
    <string name="or">or</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? <font color="#00FF00">Sign up</font></string>
</resources>